[package]
name = "urbaani"
version = "0.6.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.14.0"
termion = "2.0.0"
textwrap = "0.16.0"

# binary size optimizations
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
